DDF-3924 Prevents more than one tab from showing at once (#3359)
* DDF-3924 Fix misaligned tab css

* DDF-3924 Fix bootstrap tab issue

 - This prevents the possibility of two tabs showing at once.

--- a/ui/packages/ui/src/main/webapp/components/tab-item/tab-item.less
+++ b/ui/packages/ui/src/main/webapp/components/tab-item/tab-item.less
@@ -26,7 +26,8 @@
 @{customElementNamespace}tab-item.is-active {
     border: 1px solid rgba(0,0,0,.3);
     border-bottom: 0px;
-    border-radius: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 
     a {
         color: black;
@@ -42,7 +43,7 @@
     position: absolute;
     width: ~'calc(100% + 2px)';
     height: 2px;
-    bottom: -2px;
+    bottom: -1px;
     left: -1px;
     background: white;
     border-left: 1px solid rgba(0,0,0,.3);
